--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link href="./src/css/output.css" rel="stylesheet">
 </head>
 
-<body class="w-full overflow-x-hidden ">
+<body class="w-full overflow-x-hidden bg-main">
 
 
         <!-- Top Section Start  -->
@@ -75,10 +75,7 @@
                 </div>
 
                 <div class="flex justify-center items-center absolute top-[50%] left-[46%]">
-                        <!-- Rotating Image -->
                         <img src="./src/img/hero__badge_1.webp" alt="Main Badge" class="relative animate-rotate360">
-
-                        <!-- Static Inner Image -->
                         <img src="/src/img/brand__badge__inner.webp" alt="Inner" class="absolute">
                 </div>
         </section>
@@ -274,7 +271,7 @@
 
         <!-- Team Section Start  -->
 
-        <div class="px-72 py-16 text-center bg-main text-white py-20">
+        <section class="px-72 text-center bg-main text-white py-20">
 
                 <!-- CONTENT SECTION  -->
                 <div class="flex flex-col justify-center items-center space-y-8">
@@ -374,8 +371,187 @@
 
 
 
-        </div>
+        </section>
         <!-- Team Section End  -->
+
+        <!-- Project Section Start  -->
+        <section class="w-full h-screen relative text-white mb-28">
+                <div class="w-full h-2/3 bg-[#170F2F]"></div>
+                <div class="w-full h-1/3 bg-main"></div>
+
+
+                <img src="./src/img/project__small__img.webp" alt="project_Icons" class="absolute top-[17%] left-[8%]">
+                <img src="./src/img/project__small__img.webp" alt="project_Icons"
+                        class="absolute top-[17%] right-[11%] rotate-90">
+
+
+                <div
+                        class="w-[78vw] bg-main px-28 py-20 absolute top-[20%] right-[12%] shadow-2xl shadow-purple-400/10 flex flex-col justify-between items-center space-y-10">
+
+                        <!-- CONTENT SECTION  -->
+                        <div class="flex justify-between items-center gap-10 space-y-8">
+                                <div class="w-full">
+                                        <button
+                                                class="border border-purple-400/20 rounded-full px-7 py-1 text-lg gradient-icon">Our
+                                                Team</button>
+                                        <h2 class="text-[38px] font-bold text-start tracking-wide uppercase">Complete
+                                                Projects</span>
+                                        </h2>
+                                </div>
+                                <div class="w-1/2">
+                                        <img src="./src/img/project__small__img__2.webp" alt="arrow_icons">
+                                </div>
+                                <div>
+                                        <p class="font-semibold leading-8 tracking-wide">Lorem ipsum dolor sit amet,
+                                                consectetur adi elit, <span class="font-bold underline">sed do eiusmod
+                                                        tempor
+                                                        incididunt</span> ut labore et dolore magna aliqua. Ut enim ad
+                                                minim veniam,
+                                                quis nostrud</p>
+                                </div>
+                        </div>
+
+                        <!-- Cards Section  -->
+                        <div class="flex justify-between items-center gap-5">
+
+                                <div class="relative shadow-xl rounded-2xl overflow-hidden">
+                                        <img src="./src/img/project__5.webp" alt="Business Process Optimization"
+                                                class="w-full h-full object-cover">
+                                        <div
+                                                class="absolute bottom-0 left-0 right-0 flex justify-between items-center gap-10 bg-black/60 p-5 rounded-b-2xl shadow-lg">
+                                                <p class="text-white text-[25px] font-bold leading-tight">
+                                                        Business Process <br> Optimization
+                                                </p>
+                                                <span
+                                                        class="w-12 h-12 bg-main rounded-full flex justify-center items-center shadow-md">
+                                                        <i
+                                                                class="fa-solid fa-arrow-up text-white text-lg rotate-45"></i>
+                                                </span>
+                                        </div>
+                                </div>
+
+                                <div class="relative shadow-xl rounded-2xl overflow-hidden">
+                                        <img src="./src/img/project__6.webp" alt="Business Process Optimization"
+                                                class="w-full h-full object-cover">
+                                        <div
+                                                class="absolute bottom-0 left-0 right-0 flex justify-between items-center gap-10 bg-black/60 p-5 rounded-b-2xl shadow-lg">
+                                                <p class="text-white text-[25px] font-bold leading-tight">
+                                                        Business Process <br> Optimization
+                                                </p>
+                                                <span
+                                                        class="w-12 h-12 bg-main rounded-full flex justify-center items-center shadow-md">
+                                                        <i
+                                                                class="fa-solid fa-arrow-up text-white text-lg rotate-45"></i>
+                                                </span>
+                                        </div>
+                                </div>
+
+                                <div class="relative shadow-xl rounded-2xl overflow-hidden">
+                                        <img src="./src/img/project__7.webp" alt="Business Process Optimization"
+                                                class="w-full h-full object-cover">
+                                        <div
+                                                class="absolute bottom-0 left-0 right-0 flex justify-between items-center gap-10 bg-black/60 p-5 rounded-b-2xl shadow-lg">
+                                                <p class="text-white text-[25px] font-bold leading-tight">
+                                                        Business Process <br> Optimization
+                                                </p>
+                                                <span
+                                                        class="w-12 h-12 bg-main rounded-full flex justify-center items-center shadow-md">
+                                                        <i
+                                                                class="fa-solid fa-arrow-up text-white text-lg rotate-45"></i>
+                                                </span>
+                                        </div>
+                                </div>
+
+                        </div>
+
+                        <!-- button  -->
+                        <button
+                                class="uppercase font-serif text-white py-4 px-8 bg-main border border-white rounded-xl">View
+                                Other Projects</button>
+                </div>
+
+        </section>
+        <!-- Project Section End  -->
+
+
+        <!-- Testimonial Section Start  -->
+        <section class="px-72 text-center bg-main text-white py-20 border-t border-dashed border-purple-400/20 ">
+
+                <!-- CONTENT SECTION  -->
+                <div class="flex flex-col justify-center items-center space-y-6 relative">
+                        <button class="border border-purple-400/20 rounded-full px-7 py-1 text-lg">Happy
+                                Customers</button>
+                        <h2 class="text-[38px] font-bold text-center tracking-wide">WE OFFER CONSULTANCY
+                                <br><span>SERVICES.</span>
+                        </h2>
+                        <img src="./src/img/testimonial__small__img__4.webp" alt="UpperShape"
+                                class="absolute top-5 -left-5">
+                </div>
+
+                <!-- Cards Section  -->
+                <div class="w-full flex gap-10 mt-10">
+                        <!-- Card - 1 -->
+                        <div class="h-80 w-1/2 bg-[#170F2F] rounded-lg p-10">
+                                <p class="text-[21px] font-medium italic underline tracking-wider leading-10">Lorem
+                                        ipsum dolor sit amet consectetur adipisicing elit. Quibusdam veniam rerum nemo
+                                        dolore eaque. Lorem ipsum dolor sit amet.</p>
+                                <div
+                                        class="flex justify-between items-center border-t border-dashed border-purple-400/20 mt-10 p-4">
+                                        <img src="./src/img/testimonial__3.webp" alt="Image_testimonial">
+                                        <p class="text-start text-2xl font-bold">MATTIE WARNER <br><span
+                                                        class="text-lg font-normal gradient-icon">Business Man</span>
+                                        </p>
+                                        <img src="./src/img/testimonial__small__img__3.webp" alt="Quotes">
+                                </div>
+                        </div>
+
+                        <!-- Card - 2 -->
+                        <div class="h-80 w-1/2 bg-[#170F2F] rounded-lg p-10">
+                                <p class="text-[21px] font-medium italic underline tracking-wider leading-10">Lorem
+                                        ipsum dolor sit amet consectetur adipisicing elit. Quibusdam veniam rerum nemo
+                                        dolore eaque. Lorem ipsum dolor sit amet.</p>
+                                <div
+                                        class="flex justify-between items-center border-t border-dashed border-purple-400/20 mt-10 p-4">
+                                        <img src="./src/img/testimonial__3.webp" alt="Image_testimonial">
+                                        <p class="text-start text-2xl font-bold">MATTIE WARNER <br><span
+                                                        class="text-lg font-normal gradient-icon">Business Man</span>
+                                        </p>
+                                        <img src="./src/img/testimonial__small__img__3.webp" alt="Quotes">
+                                </div>
+                        </div>
+
+                </div>
+
+
+
+        </section>
+        <!-- Testimonial Section End  -->
+
+        <!-- Blogs Section Start  -->
+        <section class="w-full h-screen text-white px-72">
+                <div class="w-full bg-main flex justify-between items-center space-y-10">
+
+                        <!-- CONTENT SECTION  -->
+                        <div class="w-full flex justify-between items-center gap-10 space-y-8">
+                                <div class="w-full">
+                                        <button class="border border-purple-400/20 rounded-full px-7 py-1 text-lg gradient-icon">Blog  Post</button>
+                                        <h2 class="text-[38px] font-bold text-start tracking-wide uppercase">IN-DEPTH ANALYSIS AND <br>DISCUSSIONS </h2>
+                                </div>
+                                <div class="w-1/2">
+                                        <img src="./src/img/project__small__img__2.webp" alt="arrow_icons">
+                                </div>
+
+                                <div class="w-72 h-72 flex justify-center items-center">
+                                        <img src="./src/img/hero__badge_1.webp" alt="Main Badge" class="relative animate-rotate360">
+                                        <img src="/src/img/brand__badge__inner.webp" alt="Inner" class="absolute">
+                                </div>
+                        </div>
+
+
+                        
+                </div>
+        </section>
+        <!-- Blogs Section End  -->
 
         <!-- Footer Start  -->
         <footer class="bg-main pt-40 px-72">
