--- a/index.html
+++ b/index.html
@@ -528,23 +528,65 @@
         <!-- Testimonial Section End  -->
 
         <!-- Blogs Section Start  -->
-        <section class="w-full h-screen text-white px-72">
-                <div class="w-full bg-main flex justify-between items-center space-y-10">
+        <section class="w-full h-auto text-white px-72" style="background-image: url('/src/img/blog__bg.png');">
+                <div class="w-full flex flex-col justify-between items-center pt-20 pb-32">
 
                         <!-- CONTENT SECTION  -->
                         <div class="w-full flex justify-between items-center gap-10 space-y-8">
                                 <div class="w-full">
-                                        <button class="border border-purple-400/20 rounded-full px-7 py-1 text-lg gradient-icon">Blog  Post</button>
+                                        <button class="border border-purple-400/20 rounded-full px-7 py-1 text-lg">Blog  Post</button>
                                         <h2 class="text-[38px] font-bold text-start tracking-wide uppercase">IN-DEPTH ANALYSIS AND <br>DISCUSSIONS </h2>
                                 </div>
                                 <div class="w-1/2">
-                                        <img src="./src/img/project__small__img__2.webp" alt="arrow_icons">
+                                        <img src="./src/img/blog__icon.webp" alt="arrow_icons">
                                 </div>
 
                                 <div class="w-72 h-72 flex justify-center items-center">
-                                        <img src="./src/img/hero__badge_1.webp" alt="Main Badge" class="relative animate-rotate360">
+                                        <img src="./src/img/project__1.webp" alt="Main Badge" class="relative animate-rotate360">
                                         <img src="/src/img/brand__badge__inner.webp" alt="Inner" class="absolute">
                                 </div>
+                        </div>
+
+                        <!-- Card Section  -->
+                        <div class="w-full h-full flex gap-10 justify-between items-center">
+                                <!-- Card - 1  -->
+                                <div class="bg-gray-200/20 w-1/3 h-auto px-8 pt-8 pb-2 rounded-lg space-y-8 relative hover:bg-gradient-to-r hover:from-[#00229e] hover:via-[#6e1299] hover:via-[#610c88] hover:to-[#fe0094] transition duration-300 ">
+                                        <img src="./src/img/blog__4.webp" alt="blog_1" class="mb-20">
+                                        <h2 class="uppercase text-2xl font-bold">5 Strategies to Tr....</h2>
+                                        <p class="text-[18px]">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                                        <button class="bg-main border border-white rounded-lg py-4 px-9 text-center font-bold font-serif text-sm">READ MORE</button>
+
+                                        <div class="w-24 h-24 absolute top-32 right-36 bg-main  text-center p-2 rounded-lg">
+                                                <h2 class="text-pink-600 text-5xl font-bold">19</h2>
+                                                <h3 class="text-white font-bold">Sep, 2024</h3>
+                                        </div>
+                                </div>
+                                <!-- Card - 2  -->
+                                <div class="bg-gray-200/20 w-1/3 h-auto px-8 pt-8 pb-2 rounded-lg space-y-8 relative hover:bg-gradient-to-r hover:from-[#00229e] hover:via-[#6e1299] hover:via-[#610c88] hover:to-[#fe0094] transition duration-300 ">
+                                        <img src="./src/img/blog__5.webp" alt="blog_1" class="mb-20">
+                                        <h2 class="uppercase text-2xl font-bold">Why Every Startup ....</h2>
+                                        <p class="text-[18px]">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                                        <button class="bg-main border border-white rounded-lg py-4 px-9 text-center font-bold font-serif text-sm">READ MORE</button>
+
+                                        <div class="w-24 h-24 absolute top-32 right-36 bg-main  text-center p-2 rounded-lg">
+                                                <h2 class="text-pink-600 text-5xl font-bold">19</h2>
+                                                <h3 class="text-white font-bold">Sep, 2024</h3>
+                                        </div>
+                                </div>
+                                <!-- Card - 3  -->
+                                <div class="bg-gray-200/20 w-1/3 h-auto px-8 pt-8 pb-2 rounded-lg space-y-8 relative hover:bg-gradient-to-r hover:from-[#00229e] hover:via-[#6e1299] hover:via-[#610c88] hover:to-[#fe0094] transition duration-300 ">
+                                        <img src="./src/img/blog__6.webp" alt="blog_1" class="mb-20">
+                                        <h2 class="uppercase text-2xl font-bold">How Marketing Cons....</h2>
+                                        <p class="text-[18px]">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                                        <button class="bg-main border border-white rounded-lg py-4 px-9 text-center font-bold font-serif text-sm">READ MORE</button>
+
+                                        <div class="w-24 h-24 absolute top-32 right-36 bg-main  text-center p-2 rounded-lg">
+                                                <h2 class="text-pink-600 text-5xl font-bold">19</h2>
+                                                <h3 class="text-white font-bold">Sep, 2024</h3>
+                                        </div>
+                                </div>
+
+
                         </div>
 
 
