Scroll Navbar sert

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
         <!-- Top Section Start  -->
-        <section class="w-full h-fit fixed flex justify-center items-center">
+        <section id="topbar" class="w-full h-fit fixed flex justify-center items-center">
                 <ul class="w-1/2 text-white font-medium flex justify-between">
                         <li><i class="fa-solid m-4 fa-phone-volume gradient-icon text-[20px]"></i><span>(000)
                                         967-237-96</span></li>
@@ -26,8 +26,9 @@
         <!-- Top Section End  -->
 
         <!-- navbar start -->
-        <nav class="w-full h-auto px-72 flex justify-center items-center fixed top-12 z-100">
-                <div class="gradient-bg w-full flex justify-between items-center px-3 py-5 rounded-lg ">
+        <nav id="navbar" class="w-full h-auto px-72 flex justify-center items-center fixed top-12 z-100">
+                <div id="navbar_main"
+                        class="gradient-bg w-full flex justify-between items-center px-3 py-5 rounded-lg ">
                         <div class="w-fit">
                                 <img src="./src/img/Logo_1.webp" alt="Logo">
                         </div>
@@ -534,15 +535,18 @@
                         <!-- CONTENT SECTION  -->
                         <div class="w-full flex justify-between items-center gap-10 space-y-8">
                                 <div class="w-full">
-                                        <button class="border border-purple-400/20 rounded-full px-7 py-1 text-lg">Blog  Post</button>
-                                        <h2 class="text-[38px] font-bold text-start tracking-wide uppercase">IN-DEPTH ANALYSIS AND <br>DISCUSSIONS </h2>
+                                        <button class="border border-purple-400/20 rounded-full px-7 py-1 text-lg">Blog
+                                                Post</button>
+                                        <h2 class="text-[38px] font-bold text-start tracking-wide uppercase">IN-DEPTH
+                                                ANALYSIS AND <br>DISCUSSIONS </h2>
                                 </div>
                                 <div class="w-1/2">
                                         <img src="./src/img/blog__icon.webp" alt="arrow_icons">
                                 </div>
 
                                 <div class="w-72 h-72 flex justify-center items-center">
-                                        <img src="./src/img/project__1.webp" alt="Main Badge" class="relative animate-rotate360">
+                                        <img src="./src/img/project__1.webp" alt="Main Badge"
+                                                class="relative animate-rotate360">
                                         <img src="/src/img/brand__badge__inner.webp" alt="Inner" class="absolute">
                                 </div>
                         </div>
@@ -550,37 +554,52 @@
                         <!-- Card Section  -->
                         <div class="w-full h-full flex gap-10 justify-between items-center">
                                 <!-- Card - 1  -->
-                                <div class="bg-gray-200/20 w-1/3 h-auto px-8 pt-8 pb-2 rounded-lg space-y-8 relative hover:bg-gradient-to-r hover:from-[#00229e] hover:via-[#6e1299] hover:via-[#610c88] hover:to-[#fe0094] transition duration-300 ">
+                                <div
+                                        class="bg-gray-200/20 w-1/3 h-auto px-8 pt-8 pb-2 rounded-lg space-y-8 relative hover:bg-gradient-to-r hover:from-[#00229e] hover:via-[#6e1299] hover:via-[#610c88] hover:to-[#fe0094] transition duration-300 ">
                                         <img src="./src/img/blog__4.webp" alt="blog_1" class="mb-20">
                                         <h2 class="uppercase text-2xl font-bold">5 Strategies to Tr....</h2>
-                                        <p class="text-[18px]">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-                                        <button class="bg-main border border-white rounded-lg py-4 px-9 text-center font-bold font-serif text-sm">READ MORE</button>
+                                        <p class="text-[18px]">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                                                sed do eiusmod tempor incididunt.</p>
+                                        <button
+                                                class="bg-main border border-white rounded-lg py-4 px-9 text-center font-bold font-serif text-sm">READ
+                                                MORE</button>
 
-                                        <div class="w-24 h-24 absolute top-32 right-36 bg-main  text-center p-2 rounded-lg">
+                                        <div
+                                                class="w-24 h-24 absolute top-32 right-36 bg-main  text-center p-2 rounded-lg">
                                                 <h2 class="text-pink-600 text-5xl font-bold">19</h2>
                                                 <h3 class="text-white font-bold">Sep, 2024</h3>
                                         </div>
                                 </div>
                                 <!-- Card - 2  -->
-                                <div class="bg-gray-200/20 w-1/3 h-auto px-8 pt-8 pb-2 rounded-lg space-y-8 relative hover:bg-gradient-to-r hover:from-[#00229e] hover:via-[#6e1299] hover:via-[#610c88] hover:to-[#fe0094] transition duration-300 ">
+                                <div
+                                        class="bg-gray-200/20 w-1/3 h-auto px-8 pt-8 pb-2 rounded-lg space-y-8 relative hover:bg-gradient-to-r hover:from-[#00229e] hover:via-[#6e1299] hover:via-[#610c88] hover:to-[#fe0094] transition duration-300 ">
                                         <img src="./src/img/blog__5.webp" alt="blog_1" class="mb-20">
                                         <h2 class="uppercase text-2xl font-bold">Why Every Startup ....</h2>
-                                        <p class="text-[18px]">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-                                        <button class="bg-main border border-white rounded-lg py-4 px-9 text-center font-bold font-serif text-sm">READ MORE</button>
+                                        <p class="text-[18px]">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                                                sed do eiusmod tempor incididunt.</p>
+                                        <button
+                                                class="bg-main border border-white rounded-lg py-4 px-9 text-center font-bold font-serif text-sm">READ
+                                                MORE</button>
 
-                                        <div class="w-24 h-24 absolute top-32 right-36 bg-main  text-center p-2 rounded-lg">
+                                        <div
+                                                class="w-24 h-24 absolute top-32 right-36 bg-main  text-center p-2 rounded-lg">
                                                 <h2 class="text-pink-600 text-5xl font-bold">19</h2>
                                                 <h3 class="text-white font-bold">Sep, 2024</h3>
                                         </div>
                                 </div>
                                 <!-- Card - 3  -->
-                                <div class="bg-gray-200/20 w-1/3 h-auto px-8 pt-8 pb-2 rounded-lg space-y-8 relative hover:bg-gradient-to-r hover:from-[#00229e] hover:via-[#6e1299] hover:via-[#610c88] hover:to-[#fe0094] transition duration-300 ">
+                                <div
+                                        class="bg-gray-200/20 w-1/3 h-auto px-8 pt-8 pb-2 rounded-lg space-y-8 relative hover:bg-gradient-to-r hover:from-[#00229e] hover:via-[#6e1299] hover:via-[#610c88] hover:to-[#fe0094] transition duration-300 ">
                                         <img src="./src/img/blog__6.webp" alt="blog_1" class="mb-20">
                                         <h2 class="uppercase text-2xl font-bold">How Marketing Cons....</h2>
-                                        <p class="text-[18px]">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-                                        <button class="bg-main border border-white rounded-lg py-4 px-9 text-center font-bold font-serif text-sm">READ MORE</button>
+                                        <p class="text-[18px]">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                                                sed do eiusmod tempor incididunt.</p>
+                                        <button
+                                                class="bg-main border border-white rounded-lg py-4 px-9 text-center font-bold font-serif text-sm">READ
+                                                MORE</button>
 
-                                        <div class="w-24 h-24 absolute top-32 right-36 bg-main  text-center p-2 rounded-lg">
+                                        <div
+                                                class="w-24 h-24 absolute top-32 right-36 bg-main  text-center p-2 rounded-lg">
                                                 <h2 class="text-pink-600 text-5xl font-bold">19</h2>
                                                 <h3 class="text-white font-bold">Sep, 2024</h3>
                                         </div>
@@ -590,20 +609,20 @@
                         </div>
 
 
-                        
+
                 </div>
         </section>
         <!-- Blogs Section End  -->
 
         <!-- Footer Start  -->
         <footer class="bg-main pt-40 px-72">
-                <div class="mx-auto grid grid-cols-1 md:grid-cols-4 gap-8 text-white pb-24">
+                <div class="mx-auto grid grid-cols-1 md:grid-cols-5  text-white pb-24">
                         <!-- Logo and Description -->
-                        <div class="space-y-8 pr-8">
+                        <div class="space-y-8 pr-8 col-span-2">
                                 <div class="flex items-center space-x-2">
                                         <img src="./src/img/Logo_1.webp" alt="Logo" class="w-44 pr-4">
                                 </div>
-                                <p class="mt-4 text-gray-300 text-lg font-semibold leading-10">
+                                <p class="mt-4 text-gray-300 text-lg font-semibold leading-10 pr-12">
                                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                                         incididunt labore et dolore magna aliqua.
                                 </p>
@@ -625,19 +644,22 @@
 
                         <!-- Quick Links -->
                         <div>
-                                <h3 class="w-fit font-bold mb-3  border-b-2 border-white text-lg">QUICK LINKS :</h3>
-                                <ul class="space-y-2 text-gray-300">
-                                        <li><a href="#" class="hover:text-white">Privacy & policy</a></li>
-                                        <li><a href="#" class="hover:text-white">Terms & conditions</a></li>
-                                        <li><a href="#" class="hover:text-white">FAQ</a></li>
-                                        <li><a href="#" class="hover:text-white">Customer support</a></li>
-                                        <li><a href="#" class="hover:text-white">Contact us</a></li>
+                                <h3 class="w-fit font-bold mb-10  border-b-2 border-white text-lg">QUICK LINKS :</h3>
+                                <ul class="space-y-4 text-gray-300">
+                                        <li><a href="#" class="hover:text-white font-medium text-lg">Privacy &
+                                                        policy</a></li>
+                                        <li><a href="#" class="hover:text-white font-medium text-lg">Terms &
+                                                        conditions</a></li>
+                                        <li><a href="#" class="hover:text-white font-medium text-lg">FAQ</a></li>
+                                        <li><a href="#" class="hover:text-white font-medium text-lg">Customer
+                                                        support</a></li>
+                                        <li><a href="#" class="hover:text-white font-medium text-lg">Contact us</a></li>
                                 </ul>
                         </div>
 
                         <!-- Newsletter -->
                         <div>
-                                <h3 class="w-fit font-bold mb-3 border-b-2 border-white text-lg">SUBSCRIP NEWSLETTER :
+                                <h3 class="w-fit font-bold mb-10 border-b-2 border-white text-lg">SUBSCRIP NEWSLETTER :
                                 </h3>
                                 <input type="email" placeholder="Enter your email"
                                         class="w-full px-4 py-2 rounded-md text-white">
@@ -648,7 +670,7 @@
 
                         <!-- Gallery -->
                         <div>
-                                <h3 class="w-fit font-bold mb-3 border-b-2 border-white text-lg">OUR GALLERY:</h3>
+                                <h3 class="w-fit font-bold mb-10 border-b-2 border-white text-lg">OUR GALLERY:</h3>
                                 <div class="grid grid-cols-3 gap-2">
                                         <img src="src\img\footer__Small__1.webp" alt="Gallery"
                                                 class="w-20 h-20 rounded-md">
@@ -670,8 +692,8 @@
         <!-- Footer End  -->
 
         <!-- Bottom Bar -->
-        <div class="pl-72 bg-main flex justify-between items-center text-sm relative">
-                <div class="w-1 h-[94px] bg-white absolute left-[50%] bottom-[0.1px] rotate-[28deg] z-100"></div>
+        <div class="pl-72 bg-main flex justify-between items-center text-sm relative mt-16">
+                <div class="w-1 h-[100px] bg-white absolute left-[50%] -bottom-1 rotate-[28deg] z-100"></div>
                 <!-- Left Section -->
                 <div class="w-2/5 h-full">
                         <p class="text-white font-semibold text-lg">
@@ -691,6 +713,31 @@
         </div>
 
 
+
+        <script>
+                window.addEventListener("scroll", function () {
+                        var navbar = document.getElementById("navbar");
+                        var navbar_2 = document.getElementById("navbar_main");
+                        var topbar = document.getElementById("topbar");
+
+                        if (window.scrollY > 50) {
+                                navbar.classList.remove("px-72");
+                                navbar_2.classList.add("px-72", "fixed", "top-0");
+                                navbar_2.classList.remove("rounded-lg");
+
+                                topbar.classList.add("hidden");
+                                topbar.classList.remove("flex", "fixed");
+
+                        } else {
+                                navbar.classList.add("px-72");
+                                navbar_2.classList.remove("px-72", "fixed", "top-0", "rounded-lg");
+                                navbar_2.classList.add("rounded-lg");
+
+                                topbar.classList.remove("hidden");
+                                topbar.classList.add("flex", "fixed");
+                        }
+                });
+        </script>
 
 
 </body>
