--- a/index.html
+++ b/index.html
@@ -150,7 +150,6 @@
         <section class="w-full h-full bg-[#fff0fa] flex flex-col justify-center items-center gap-12 text-black pt-20"
                 style="background-image: url('/src/img/service__bg.png');">
 
-                <!-- CONTENT SECTION  -->
                 <div class="flex flex-col justify-center items-center space-y-8">
                         <button
                                 class="border border-purple-400/20 rounded-full px-7 py-1 text-lg gradient-icon">OurService</button>
@@ -159,9 +158,7 @@
                         </h2>
                 </div>
 
-                <!-- CARDS SECTION  -->
                 <div class="flex justify-between items-center gap-10">
-                        <!-- Card Start  -->
                         <div
                                 class="w-96 h-full bg-white py-12 px-14 flex flex-col rounded-lg space-y-6 hover:bg-gradient-to-r hover:from-[#00229e] hover:via-[#6e1299] hover:via-[#610c88] hover:to-[#fe0094] transition duration-300">
                                 <div class="flex justify-between items-center">
@@ -177,8 +174,7 @@
                                 <p class="text-black/60 ">Duis aute irure dolor in reprehenderit in voluptate velit esse
                                         cillum dolore eu fugiat nulla pariatur.</p>
                         </div>
-                        <!-- Card End  -->
-                        <!-- Card Start  -->
+
                         <div
                                 class="w-96 h-full bg-white py-12 px-14 flex flex-col rounded-lg space-y-6 hover:bg-gradient-to-r hover:from-[#00229e] hover:via-[#6e1299] hover:via-[#610c88] hover:to-[#fe0094] transition duration-300">
                                 <div class="flex justify-between items-center">
@@ -194,8 +190,7 @@
                                 <p class="text-black/60 ">Duis aute irure dolor in reprehenderit in voluptate velit esse
                                         cillum dolore eu fugiat nulla pariatur.</p>
                         </div>
-                        <!-- Card End  -->
-                        <!-- Card Start  -->
+
                         <div
                                 class="w-96 h-full bg-white py-12 px-14 flex flex-col rounded-lg space-y-6 hover:bg-gradient-to-r hover:from-[#00229e] hover:via-[#6e1299] hover:via-[#610c88] hover:to-[#fe0094] transition duration-300">
                                 <div class="flex justify-between items-center">
@@ -211,10 +206,10 @@
                                 <p class="text-black/60 ">Duis aute irure dolor in reprehenderit in voluptate velit esse
                                         cillum dolore eu fugiat nulla pariatur.</p>
                         </div>
-                        <!-- Card End  -->
+
                 </div>
 
-                <!-- <Video Section Start  -->
+
                 <div class="w-full h-[90vh] flex justify-center items-center px-80 py-44">
                         <div class="relative w-full h-full bg-cover bg-center bg-blend-overlay bg-[#0c0e2baf] shadow-2xl shadow-purple-900/10 rounded-lg"
                                 style="background-image: url('/src/img/video__3.webp');">
@@ -235,41 +230,41 @@
                                 </div>
                         </div>
                 </div>
-                <!-- <Video Section End  -->
+
         </section>
         <!-- Service Section End  -->
 
 
         <!-- Statstics Section Start -->
         <section class="w-full gradient-bg h-36 flex justify-between items-center px-72">
-                <!-- Text  -->
+
                 <div class="text-white text-center">
                         <h2 class="text-3xl font-bold">835+</h2>
                         <p class="text-xl font-medium">Total Products</p>
                 </div>
-                <!-- LOGO  -->
+
                 <div>
                         <img src="./src/img/brand__3.webp" alt="Shape_Stats">
                 </div>
-                <!-- Text  -->
+
                 <div class="text-white text-center">
                         <h2 class="text-3xl font-bold">6246+</h2>
                         <p class="text-xl font-medium">Project Completed</p>
                 </div>
-                <!-- LOGO  -->
+
                 <div>
                         <img src="./src/img/brand__3.webp" alt="Shape_Stats">
                 </div>
-                <!-- Text  -->
+
                 <div class="text-white text-center">
                         <h2 class="text-3xl font-bold">2000+</h2>
                         <p class="text-xl font-medium">Happy Customers</p>
                 </div>
-                <!-- LOGO  -->
+
                 <div>
                         <img src="./src/img/brand__3.webp" alt="Shape_Stats">
                 </div>
-                <!-- Text  -->
+
                 <div class="text-white text-center">
                         <h2 class="text-3xl font-bold">60+</h2>
                         <p class="text-xl font-medium">Team Members</p>
@@ -283,7 +278,7 @@
 
         <section class="px-72 text-center bg-white text-black py-20">
 
-                <!-- CONTENT SECTION  -->
+
                 <div class="flex flex-col justify-center items-center space-y-8">
                         <button class="border border-purple-400/20 rounded-full px-7 py-1 text-lg gradient-icon">Our
                                 Team</button>
@@ -292,9 +287,9 @@
                         </h2>
                 </div>
 
-                <!-- Cards Section  -->
+
                 <div class="flex gap-10 mt-40">
-                        <!-- Card - 1 -->
+
                         <div
                                 class="h-80 w-72 bg-white border border-purple-400/20 rounded-lg relative pt-36 px-10 space-y-2 ">
                                 <img src="./src/img/team_5.webp" alt="team_5" class="absolute left-[20%] -top-[20%]">
@@ -313,7 +308,7 @@
                                 </div>
                         </div>
 
-                        <!-- Card - 2 -->
+
                         <div
                                 class="h-80 w-72 bg-white border border-purple-400/20 rounded-lg relative pt-36 px-10 space-y-2 ">
                                 <div class="w-full h-full absolute gradient-bg top-0 left-0 rotate-12 rounded-lg z-0">
@@ -339,7 +334,7 @@
                                 </div>
                         </div>
 
-                        <!-- Card - 3 -->
+
                         <div
                                 class="h-80 w-72 bg-white border border-purple-400/20 rounded-lg relative pt-36 px-10 space-y-2 ">
                                 <img src="./src/img/team_7.webp" alt="team_5" class="absolute left-[20%] -top-[20%]">
@@ -357,7 +352,7 @@
                                                         class="text-[14px] fab fa-skype"></i></a>
                                 </div>
                         </div>
-                        <!-- Card - 4 -->
+
                         <div
                                 class="h-80 w-72 bg-white border border-purple-400/20 rounded-lg relative pt-36 px-10 space-y-2 ">
                                 <img src="./src/img/team_8.webp" alt="team_5" class="absolute left-[20%] -top-[20%]">
@@ -375,8 +370,6 @@
                                                         class="text-[14px] fab fa-skype"></i></a>
                                 </div>
                         </div>
-
-
                 </div>
 
 
@@ -397,8 +390,6 @@
 
                 <div
                         class="w-[78vw] bg-white px-28 py-20 absolute top-[20%] right-[12%] shadow-2xl shadow-purple-400/10 flex flex-col justify-between items-center space-y-10 rounded-lg">
-
-                        <!-- CONTENT SECTION  -->
                         <div class="flex justify-between items-center gap-10 space-y-8">
                                 <div class="w-full">
                                         <button
@@ -421,7 +412,6 @@
                                 </div>
                         </div>
 
-                        <!-- Cards Section  -->
                         <div class="flex justify-between items-center gap-5">
 
                                 <div class="relative shadow-xl rounded-2xl overflow-hidden">
@@ -474,7 +464,6 @@
 
                         </div>
 
-                        <!-- button  -->
                         <button
                                 class="uppercase font-serif text-white py-4 px-9 bg-main border border-white rounded-xl">View
                                 Other Project</button>
@@ -486,8 +475,6 @@
 
         <!-- Testimonial Section Start  -->
         <section class="px-72 text-center bg-white text-black py-20 border-t border-dashed border-purple-400/20 ">
-
-                <!-- CONTENT SECTION  -->
                 <div class="flex flex-col justify-center items-center space-y-6 relative">
                         <button class="border border-purple-400/20 rounded-full px-7 py-1 text-lg">Happy
                                 Customers</button>
@@ -498,9 +485,8 @@
                                 class="absolute top-5 -left-5">
                 </div>
 
-                <!-- Cards Section  -->
                 <div class="w-full flex gap-10 mt-10 mb-20">
-                        <!-- Card - 1 -->
+
                         <div class="h-80 w-1/2 bg-[#fff0fa] rounded-lg p-10">
                                 <p
                                         class="text-[21px] font-medium italic underline tracking-wider leading-10 text-black/60">
@@ -517,7 +503,6 @@
                                 </div>
                         </div>
 
-                        <!-- Card - 2 -->
                         <div class="h-80 w-1/2 bg-[#fff0fa] rounded-lg p-10">
                                 <p
                                         class="text-[21px] font-medium italic underline tracking-wider leading-10 text-black/60">
@@ -545,7 +530,6 @@
         <section class="w-full h-auto text-black px-72" style="background-image: url('/src/img/blog__bg.png');">
                 <div class="w-full flex flex-col justify-between items-center pt-20 pb-32">
 
-                        <!-- CONTENT SECTION  -->
                         <div class="w-full flex justify-between items-center gap-10 space-y-8">
                                 <div class="w-full">
                                         <button class="border border-white text-white rounded-full px-7 py-1 text-lg">Blog
@@ -565,11 +549,9 @@
                                 </div>
                         </div>
 
-                        <!-- Card Section  -->
                         <div class="w-full h-full flex gap-10 justify-between items-center">
-                                <!-- Card - 1  -->
                                 <div
-                                        class="bg-gray-200/20 w-1/3 h-auto px-8 pt-8 pb-2 rounded-lg space-y-8 relative hover:bg-gradient-to-r hover:from-[#00229e] hover:via-[#6e1299] hover:via-[#610c88] hover:to-[#fe0094] transition duration-300 ">
+                                        class="bg-gray-200/20 w-1/3 h-auto px-8 pt-8 pb-2 rounded-lg space-y-8 relative hover:bg-gradient-to-r hover:from-[#00229e] hover:via-[#6e1299] hover:to-[#fe0094] transition duration-300 ">
                                         <img src="./src/img/blog__4.webp" alt="blog_1" class="mb-20">
                                         <h2 class="uppercase text-2xl font-bold text-white">5 Strategies to Tr....</h2>
                                         <p class="text-[18px] text-white">Lorem ipsum dolor sit amet, consectetur
@@ -585,9 +567,9 @@
                                                 <h3 class="text-black/60 font-bold">Sep, 2024</h3>
                                         </div>
                                 </div>
-                                <!-- Card - 2  -->
+
                                 <div
-                                        class="bg-gray-200/20 w-1/3 h-auto px-8 pt-8 pb-2 rounded-lg space-y-8 relative hover:bg-gradient-to-r hover:from-[#00229e] hover:via-[#6e1299] hover:via-[#610c88] hover:to-[#fe0094] transition duration-300 ">
+                                        class="bg-gray-200/20 w-1/3 h-auto px-8 pt-8 pb-2 rounded-lg space-y-8 relative hover:bg-gradient-to-r hover:from-[#00229e] hover:via-[#6e1299] hover:to-[#fe0094] transition duration-300 ">
                                         <img src="./src/img/blog__5.webp" alt="blog_1" class="mb-20">
                                         <h2 class="uppercase text-2xl font-bold text-white">Why Every Startup ....</h2>
                                         <p class="text-[18px] text-white">Lorem ipsum dolor sit amet, consectetur
@@ -603,9 +585,9 @@
                                                 <h3 class="text-black/60 font-bold">Sep, 2024</h3>
                                         </div>
                                 </div>
-                                <!-- Card - 3  -->
+
                                 <div
-                                        class="bg-gray-200/20 w-1/3 h-auto px-8 pt-8 pb-2 rounded-lg space-y-8 relative hover:bg-gradient-to-r hover:from-[#00229e] hover:via-[#6e1299] hover:via-[#610c88] hover:to-[#fe0094] transition duration-300 ">
+                                        class="bg-gray-200/20 w-1/3 h-auto px-8 pt-8 pb-2 rounded-lg space-y-8 relative hover:bg-gradient-to-r hover:from-[#00229e] hover:via-[#6e1299] hover:to-[#fe0094] transition duration-300 ">
                                         <img src="./src/img/blog__6.webp" alt="blog_1" class="mb-20">
                                         <h2 class="uppercase text-2xl font-bold text-white">How Marketing Cons....</h2>
                                         <p class="text-[18px] text-white">Lorem ipsum dolor sit amet, consectetur
@@ -634,7 +616,7 @@
         <!-- Footer Start  -->
         <footer class="bg-[#fff0fa] pt-40 px-72">
                 <div class="mx-auto grid grid-cols-1 md:grid-cols-5  text-black pb-24">
-                        <!-- Logo and Description -->
+
                         <div class="space-y-8 pr-8 col-span-2">
                                 <div class="flex items-center space-x-2">
                                         <img src="./src/img/Logo_2.webp" alt="Logo" class="w-44 pr-4">
@@ -659,7 +641,7 @@
                                 </div>
                         </div>
 
-                        <!-- Quick Links -->
+
                         <div>
                                 <h3 class="w-fit font-bold mb-10  border-b-2  text-lg">QUICK LINKS :</h3>
                                 <ul class="space-y-4 text-black">
@@ -674,7 +656,7 @@
                                 </ul>
                         </div>
 
-                        <!-- Newsletter -->
+
                         <div class="space-y-8">
                                 <h3 class="w-fit font-bold mb-10 border-b-2 text-lg">SUBSCRIP NEWSLETTER :
                                 </h3>
@@ -685,7 +667,7 @@
                                         NOW</button>
                         </div>
 
-                        <!-- Gallery -->
+
                         <div>
                                 <h3 class="w-fit font-bold mb-10 border-b-2  text-lg">OUR GALLERY:</h3>
                                 <div class="grid grid-cols-3 gap-2">
@@ -711,7 +693,7 @@
         <!-- Bottom Bar -->
         <div class="pl-72 bg-main flex justify-between items-center text-sm relative">
                 <div class="w-1 h-[100px] bg-white absolute left-[50%] -bottom-1 rotate-[28deg] z-100"></div>
-                <!-- Left Section -->
+
                 <div class="w-2/5 h-full">
                         <p class="text-white font-semibold text-lg">
                                 Copyright © 2025 <span class="font-bold text-purple-800">BASTUN.</span> All Right
@@ -719,7 +701,6 @@
                         </p>
                 </div>
 
-                <!-- Right Section with Custom Shape -->
                 <div class="relative w-3/5 h-full text-end">
                         <div class="gradient-bg text-lg font-semibold text-white py-6 px-6 relative z-10"
                                 style="clip-path: polygon(4% 0%, 100% 0%, 100% 100%, 0% 100%);">
