Almost Responsive somethings need To fixed

--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
                 <ul class="w-1/2 text-black flex justify-between">
                         <li><i class="fa-solid m-4 fa-phone-volume gradient-icon text-[20px]"></i><span>(000)
                                         967-237-96</span></li>
-                        <li><i class="fa-solid m-4 fa-envelope gradient-icon text-[20px]"></i><span></span>(000)
-                                967-237-96</li>
+                        <li><i class="fa-solid m-4 fa-envelope gradient-icon text-[20px]"></i><span>(000)
+                                        967-237-96</span></li>
                         <li class="text-white"><i
                                         class="fa-solid m-4 fa-location-dot gradient-icon text-[20px]"></i><span>2650
-                                        Cottage Ct
-                                        #LOPark City, Utah(UT), 84098</span></li>
+                                        Cottage Ct #LOPark City, Utah(UT), 84098</span></li>
                 </ul>
         </section>
         <!-- Top Section End  -->
@@ -79,15 +78,13 @@
         <section class="w-full h-full flex flex-col md:flex-row bg-white relative top-16 md:top-0">
                 <!-- Left Content -->
                 <div
-                        class="w-full md:w-1/2 text-black flex flex-col justify-center items-start px-6 lg:pl-72 space-y-6 md:space-y-10 py-10 md:py-0">
+                        class="w-full md:w-1/2 text-black flex flex-col justify-center items-start px-6 xl:pl-72 space-y-6 md:space-y-10 py-10 md:py-0">
                         <h1 class="text-4xl lg:text-8xl font-bold">NAVIGATION SUCCESS TOGETHER</h1>
-                        <p class="font-semibold text-lg md:text-xl pr-4 md:pr-40">
-                                Sagittis purus amet volutpat consequat mauris nunc congue nisi and tortor.
-                        </p>
+                        <p class="font-semibold text-lg md:text-xl pr-4 md:pr-40"> Sagittis purus amet volutpat
+                                consequat mauris nunc congue nisi and tortor. </p>
                         <button
                                 class="gradient-bg text-sm md:text-[13px] font-bold font-serif py-3 md:py-4 px-8 md:px-10 rounded-lg text-white">
-                                OUR ALL SERVICES
-                        </button>
+                                OUR ALL SERVICES </button>
                 </div>
 
                 <!-- Right Image -->
@@ -145,11 +142,9 @@
                 <div class="w-full h-full space-y-6 lg:space-y-8 px-4 lg:px-0">
                         <button
                                 class="border border-purple-400/20 rounded-full px-5 lg:px-7 py-2 text-sm lg:text-md gradient-icon">
-                                About Company
-                        </button>
-                        <h2 class="text-2xl lg:text-4xl font-bold leading-8 lg:leading-12">
-                                QUALITY CONSULTATION FOR SECURE BUSINESS. WE HAVE 32 YEARS OF EXPERIENCE.
-                        </h2>
+                                About Company </button>
+                        <h2 class="text-2xl lg:text-4xl font-bold leading-8 lg:leading-12"> QUALITY CONSULTATION FOR
+                                SECURE BUSINESS. WE HAVE 32 YEARS OF EXPERIENCE. </h2>
                         <div class="flex flex-col md:flex-row gap-5 md:gap-10">
                                 <div
                                         class="w-full md:w-1/3 h-fit relative gradient-bg py-6 md:py-10 rounded-lg text-center">
@@ -320,7 +315,7 @@
                 </div>
 
 
-                <div class="flex flex-col md:flex-row space-y-20 gap-10 lg:mt-40 justify-center items-center mt-24">
+                <div class="flex flex-col lg:flex-row space-y-20 gap-10 lg:mt-40 justify-center items-center mt-24">
 
                         <div
                                 class="h-80 w-72 bg-white border border-purple-400/20 rounded-lg relative pt-36 px-10 space-y-2 ">
@@ -422,9 +417,9 @@
 
 
                 <div
-                        class="w-[78vw] bg-white px-7 py-16 lg:px-28 lg:py-20 md:absolute top-[20%] right-[12%] shadow-2xl shadow-purple-400/10 flex flex-col justify-between items-center space-y-10 rounded-lg">
+                        class="w-[78vw] bg-white px-7 py-16 lg:px-28 lg:py-20 lg:absolute top-[20%] right-[12%] shadow-2xl shadow-purple-400/10 flex flex-col justify-between items-center space-y-10 rounded-lg">
 
-                        <div class="flex flex-col md:flex-row justify-between items-center gap-10 space-y-8">
+                        <div class="flex flex-col lg:flex-row justify-between items-center gap-10 space-y-8">
                                 <div class="w-full">
                                         <button
                                                 class="border border-purple-400/20 rounded-full px-7 py-1 text-lg gradient-icon">Our
@@ -446,7 +441,7 @@
                                 </div>
                         </div>
 
-                        <div class="flex flex-col md:flex-row justify-between items-center gap-5">
+                        <div class="flex flex-col lg:flex-row justify-between items-center gap-5">
 
                                 <div class="relative shadow-xl rounded-2xl overflow-hidden">
                                         <img src="./src/img/project__5.webp" alt="Business Process Optimization"
@@ -521,7 +516,7 @@
                 </div>
 
                 <div
-                        class="w-full flex flex-col md:flex-row justify-center items-center gap-10 mt-10 mb-20 space-y-10 lg:space-y-0">
+                        class="w-full flex flex-col lg:flex-row justify-center items-center gap-10 mt-10 mb-20 space-y-10 lg:space-y-0">
 
                         <div class="lg:h-80 lg:w-1/2 bg-[#fff0fa] rounded-lg p-10">
                                 <p
@@ -587,7 +582,7 @@
                         </div>
 
                         <div
-                                class="w-full h-full flex md:flex-row flex-col gap-10 justify-between items-center space-y-8 lg:space-y-0">
+                                class="w-full h-full flex lg:flex-row flex-col gap-10 justify-between items-center space-y-8 lg:space-y-0">
                                 <div
                                         class="bg-gray-200/20 lg:w-1/3 h-auto px-8 pt-8 pb-2 rounded-lg space-y-8 relative hover:bg-gradient-to-r hover:from-[#00229e] hover:via-[#6e1299] hover:to-[#fe0094] transition duration-300 ">
                                         <img src="./src/img/blog__4.webp" alt="blog_1" class="mb-20">
@@ -716,7 +711,7 @@
                                 </div>
 
                                 <!-- Gallery -->
-                                <div class="text-center sm:text-left">
+                                <div class="text-center sm:text-left block md:hidden lg:block">
                                         <h3 class="w-fit font-bold mb-6 border-b-2 text-lg">OUR GALLERY:</h3>
                                         <div class="grid grid-cols-3 gap-2 justify-center sm:justify-start">
                                                 <img src="src/img/footer__Small__1.webp" alt="Gallery"
@@ -748,7 +743,6 @@
                                 class="md:hidden block p-4 mt-2 w-full gradient-bg rounded-xl text-white text-center text-lg">
                                 <a href="#" class="hover:underline">Privacy & Policy</a> ||
                                 <a href="#" class="hover:underline">Terms & Conditions</a>
-
                         </p>
                 </div>
 
